--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="Images\Samin.png" width="200" height="200" alt=""></td>
+            <td><img src="Images\Samin.png" alt=""></td>
             <td>
                 <h1>S M Muhsiul Haque</h1>
                 <p>Student Of <strong><em>Green University.</strong></em></p>
